--- a/src/Components/NewsCard/NewsCard.scss
+++ b/src/Components/NewsCard/NewsCard.scss
@@ -1,10 +1,13 @@
 .dateBox {
-    font-size: 14px;
+  font-size: 14px;
 }
-.dateIcon{
-    margin-bottom: -3px;
+.dateIcon {
+  margin-bottom: -3px;
 }
-.moreInformationButton{
-    color: #363636;
-    
+.moreInformationButton {
+  color: #363636;
+  text-decoration: none;
+}
+.moreInformationLink{
+    text-decoration: none;
 }
