--- a/src/Pages/ArticlePage/ArticlePage.scss
+++ b/src/Pages/ArticlePage/ArticlePage.scss
@@ -3,14 +3,17 @@
   min-height: 100vh;
   .backgraundImg {
     width: 100%;
+    height: 50vh;
   }
   .articalBox {
     display: flex;
     justify-content: center;
+    
     .articalWrapp {
       background-color: #fefefa;
       margin-top: -50px;
       position: relative;
+      padding-bottom: 50px;
       margin-bottom: 50px;
       box-shadow: 0px 8px 24px 0px #0000000D;
       border-radius: 10px;
@@ -26,6 +29,7 @@
         margin-left: 50px;
         margin-right: 50px;
       }
+      
     }
   }
   .backHomePage{
